set illegal access to debug